# memrev

./: .gitignore  CMakeLists.txt  README.md  main.cc  rev.cc
libmemrev/: CMakeLists.txt
libmemrev/include/: __vector.h  memrev.h
libmemrev/src/: memrev.cc  memrev_test.cc
memrev/: CMakeLists.txt  __vector.h  memrev.cc  memrev.h
